<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/home_activity"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
        <item android:title="Add">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/add_schedule"
                        android:icon="@drawable/ic_add_circle_outline_black_24dp"
                        android:title="@string/add_schedule" />
                    <item
                        android:id="@+id/add_exam"
                        android:icon="@drawable/ic_add_circle_outline_black_24dp"
                        android:title="@string/addExam" />
                </group>
            </menu>
        </item>

    <item android:title="View">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/view_week_schedule"
                    android:icon="@drawable/ic_view_black_24dp"
                    android:title="@string/viewWeekSchedule"/>

                <item android:id="@+id/view_exam_schedule"
                    android:icon="@drawable/ic_view_black_24dp"
                    android:title="@string/viewExamSchedule"/>
            </group>

        </menu>
    </item>

    </group>
</menu>