<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/update_week_schedule_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toBottomOf="@id/day_scroll_view">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/add_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/editTile"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/subject_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/e_subject_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_subject"
            android:inputType="text"
            android:hint="@string/subject"
            android:minWidth="250dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@id/e_teacher_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_title_text_view" />

        <EditText
            android:id="@+id/e_teacher_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_person"
            android:inputType="textPersonName"
            android:hint="@string/teacher"
            android:minWidth="250dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@id/e_room_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/e_subject_edit_text" />

        <EditText
            android:id="@+id/e_room_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_location"
            android:inputType="text"
            android:hint="@string/room"
            android:minWidth="250dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@id/label_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/e_teacher_edit_text" />

        <TextView
            android:id="@+id/e_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:minWidth="250dp"
            android:text="@string/select_day_time_label"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/day_scroll_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/e_room_edit_text" />

        <HorizontalScrollView
            android:id="@+id/e_day_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:minWidth="250dp"
            app:layout_constraintBottom_toTopOf="@id/time_linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/e_label_text_view">

            <include layout="@layout/days_text_view" />
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/e_time_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:minWidth="250dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/e_day_scroll_view"
            app:layout_constraintBottom_toTopOf="@id/add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/from_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_label"
                android:padding="8dp"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/e_from_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/time_hint"
                android:padding="8dp"
                android:focusable="false"
                android:background="@android:color/transparent" />
            <TextView
                android:id="@+id/to_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_label"
                android:padding="8dp"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/e_to_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/time_hint"
                android:padding="8dp"
                android:focusable="false"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <Button
            android:id="@+id/e_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="250dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/update_schedule_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/e_time_linear_layout" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>